// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: EpicSort ui is ASC 1`] = `
<Icon
  className="pr-1"
  icon="arrow_drop_up"
  onClick={[Function]}
/>
`;

exports[`Component: EpicSort ui is DESC 1`] = `
<Icon
  className="pr-1"
  icon="arrow_drop_down"
  onClick={[Function]}
/>
`;

exports[`Component: EpicSort ui is NONE 1`] = `
<Icon
  className="pr-1"
  icon="sort"
  onClick={[Function]}
/>
`;
